@@ -54,48 +54,48 @@ Class42=CWavFileDlg
 Class43=CWireDlg
 
 ResourceCount=42
-Resource1=IDR_MAINFRAME (Neutral (Default))
-Resource2=IDD_GEARDISTORT (Neutral (Default))
+Resource1=IDD_MASTERDLG (Neutral (Default))
+Resource2=IDD_MIDI_INPUT
 Resource3=IDR_VSTFRAME (Neutral (Default))
-Resource4=IDR_WAVEFRAME (Neutral (Default))
-Resource5=IDD_PRESETS (Neutral (Default))
-Resource6=IDD_MIDI_MONITOR (Neutral (Default))
-Resource7=IDD_DIRECTORIES (Neutral (Default))
-Resource8=IDD_NEWMACHINE (Neutral (Default))
-Resource9=IDD_ABOUTBOX (Neutral (Default))
-Resource10=IDD_SEQUENCER (Neutral (Default))
-Resource11=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource12=IDD_OUTPUT (Neutral (Default))
-Resource13=IDD_MIDI_INPUT
-Resource14=IDD_CONFIGURATION (Neutral (Default))
-Resource15=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource16=IDD_INST_EDITOR (Neutral (Default))
-Resource17=IDD_INSTRUMENT (Neutral (Default))
-Resource18=IDD_MIDI_LEARN
-Resource19=IDD_SWINGFILL
-Resource20=IDD_PSYBAR (Neutral (Default))
-Resource21=IDD_PSYBAR2 (Neutral (Default))
-Resource22=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource23=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource24=IDD_INFO (Neutral (Default))
-Resource25=IDD_WIREDIALOG (Neutral (Default))
-Resource26=IDD_PATDLG (Neutral (Default))
-Resource27=IDD_MACPROP (Neutral (Default))
-Resource28=IDD_ENVDIALOG (Neutral (Default))
-Resource29=IDR_MACHINEFRAME (Neutral (Default))
-Resource30=IDD_GEAR_TRACKER (Neutral (Default))
-Resource31=IDD_GEAR_DELAY (Neutral (Default))
-Resource32=IDD_GEAR_FLANGER (Neutral (Default))
-Resource33=IDD_GEAR_FILTER (Neutral (Default))
-Resource34=IDD_GREETS (Neutral (Default))
-Resource35=IDD_SKIN (Neutral (Default))
-Resource36=IDD_SONGPROP (Neutral (Default))
-Resource37=IDD_GEAR_GAINER (Neutral (Default))
-Resource38=IDD_KEYCONFIG (Neutral (Default))
-Resource39=IDD_MASTERDLG (Neutral (Default))
-Resource40=IDD_NEWVAL (Neutral (Default))
-Resource41=IDD_VSTRACK (Neutral (Default))
-Resource42=IDR_POPUPMENU (Neutral (Default))
+Resource4=IDR_POPUPMENU (Neutral (Default))
+Resource5=IDD_GEAR_FILTER (Neutral (Default))
+Resource6=IDD_GREETS (Neutral (Default))
+Resource7=IDD_VSTRACK (Neutral (Default))
+Resource8=IDD_SONGPROP (Neutral (Default))
+Resource9=IDD_GEAR_GAINER (Neutral (Default))
+Resource10=IDR_MACHINEFRAME (Neutral (Default))
+Resource11=IDR_WAVEFRAME (Neutral (Default))
+Resource12=IDD_NEWVAL (Neutral (Default))
+Resource13=IDD_NEWMACHINE (Neutral (Default))
+Resource14=IDD_PRESETS (Neutral (Default))
+Resource15=IDD_MIDI_MONITOR (Neutral (Default))
+Resource16=IDD_KEYCONFIG (Neutral (Default))
+Resource17=IDD_PSYBAR (Neutral (Default))
+Resource18=IDD_ABOUTBOX (Neutral (Default))
+Resource19=IDD_SEQUENCER (Neutral (Default))
+Resource20=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource21=IDD_OUTPUT (Neutral (Default))
+Resource22=IDD_DIRECTORIES (Neutral (Default))
+Resource23=IDD_CONFIGURATION (Neutral (Default))
+Resource24=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource25=IDD_INST_EDITOR (Neutral (Default))
+Resource26=IDD_SWINGFILL
+Resource27=IDD_MIDI_LEARN
+Resource28=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource29=IDD_GEAR_FLANGER (Neutral (Default))
+Resource30=IDD_PSYBAR2 (Neutral (Default))
+Resource31=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource32=IDD_INSTRUMENT (Neutral (Default))
+Resource33=IDD_INFO (Neutral (Default))
+Resource34=IDD_WIREDIALOG (Neutral (Default))
+Resource35=IDD_GEARDISTORT (Neutral (Default))
+Resource36=IDD_MACPROP (Neutral (Default))
+Resource37=IDD_PATDLG (Neutral (Default))
+Resource38=IDD_SKIN (Neutral (Default))
+Resource39=IDD_GEAR_TRACKER (Neutral (Default))
+Resource40=IDD_GEAR_DELAY (Neutral (Default))
+Resource41=IDD_ENVDIALOG (Neutral (Default))
+Resource42=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
 Type=0
