@@ -27,8 +27,9 @@ V1.67
 ! slight reordering of interface due to user request for more intuitive use (pooplog)
 + Native Plugin realtime mouse tweak recording!!! (pooplog)
 + value dialog in machines shows offset hex values so they can be used easily with rest of program (pooplog)
-! Added "Xerox" button to seq editor (named that until someone suggests a good 5 letter word for duplicate) [Alk] (poolog)
-! Added Swing Fill command (pooplog)
++ Added "Xerox" button to seq editor (named that until someone suggests a good 5 letter word for duplicate) [Alk] (poolog)
++ Added Swing Fill command (pooplog)
+! Increased max lines/pattern to 256 (pooplog)
 
 V1.66
 -----
